--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-body{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+.form-wrapper{
+    height: 100vh;
     background: url("/src/components/images/back1.jpg") no-repeat;
-    background-size: 220vh 100vh;
+    background-size:cover;
 }
 
 
