--- a/src/components/User.css
+++ b/src/components/User.css
@@ -1,18 +1,31 @@
 .form-container1{
-    background-color: aqua;
-    padding-top: 10%;
-    width: 100%;
-    height: 78.5vh;
-   
-   
+    padding-top: 5%;
+    height: 89.1vh;
+    background: url("/src/components/images/back3.jpg") no-repeat;
+    background-size: cover;
+}
+.inner{
+    border-radius: 10px;
+    width: 600px;
+    background-color: azure;
+    opacity: 0.7; 
+    margin-left: 30rem;
 }
 .inner-form{
-    background-color: azure;
-    width: 600px;
-    margin-left:auto ;
+    color: black;
     margin-right: auto;
     display: flex;
     padding-left: 3rem;
     justify-content: left;
     align-items:center;
+}
+.inner-form h2{
+    width: 50%;
+}
+.inner-form .data-field{
+    width: 50%;
+}
+.inner-form p{
+    color: black;
+    font-size: 25px;
 }
