--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -11,7 +11,6 @@ body {
 .container{
     width: 100%;
     height: 100vh;
-    /*background-color: black;*/
     display: grid;
     justify-content: center;
     align-items: center;
@@ -19,6 +18,7 @@ body {
     background-size: 100% 100%;
 }
 .inner-container{
+    opacity: 0.7;
     color: black;
     display: flex;
     align-items: center;
@@ -26,9 +26,11 @@ body {
     flex-direction: column;
     width: 60vh;
     height: 50vh;
-    /* position: relative; */
     background-color: white;
     border-radius: 12px;
+}
+.inner-container:hover{
+    opacity: 0.9;
 }
 .inner-container input{
     color: black;
