--- a/src/components/User.css
+++ b/src/components/User.css
@@ -1,6 +1,6 @@
 .form-container1{
     padding-top: 5%;
-    height: 89.1vh;
+    height: 89.35vh;
     background: url("/src/components/images/back3.jpg") no-repeat;
     background-size: cover;
 }
@@ -9,7 +9,7 @@
     width: 600px;
     background-color: azure;
     opacity: 0.7; 
-    margin-left: 30rem;
+    margin:5rem 0 0 42rem;
 }
 .inner-form{
     color: black;
